--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
-{
-    box-sizing: boder-box;
+*{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f1f3f6;
+    background-color: #3a3636;
     color: #333;
     padding: 20px;
 }
 
-h1,h2{
+h1, h2{
     color: #1a73e8;
     margin-bottom: 20px;
-
 }
 
 form{
@@ -26,34 +25,41 @@ form{
     max-width: 500px;
 }
 
-
 input, textarea{
+    width: 100%;
+    padding: 10px 15px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
     font-size: 16px;
 }
 
 button{
     cursor: pointer;
-    transition: background o.3s ease;
+    transition: background 0.3s ease;
     margin-right: 16px;
     background-color: #1a73e8;
     color: #fff;
+    padding: 10px 18px;
     border: none;
     border-radius: 8px;
     font-size: 16px;
 }
-button :hover{
+
+button:hover{
     background-color: #125cc0;
 }
+
 hr{
-    margin: 40px;
+    margin: 40px 0;
     border: none;
     border-top: 1px solid #ccc;
 }
 
 #videos-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(320px, 1fr));
-    gap:20px;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 20px;
 }
 
 .video-item{
@@ -63,9 +69,9 @@ hr{
     padding: 20px;
     transition: transform 0.2s ease;
 }
+
 .video-item:hover{
-    20px;
-    transmission
+    transform: scale(1.02);
 }
 
 .video-item h3{
@@ -75,5 +81,5 @@ hr{
 
 .video-item p{
     margin-bottom: 8px;
-    color: #555;
+    color:#555;
 }
